--- a/assets/bootstrap.css
+++ b/assets/bootstrap.css
@@ -5424,6 +5424,7 @@ a.list-group-item-danger.active:focus {
 .well {
   min-height: 20px;
   padding: 19px;
+  color: #000;
   margin-bottom: 20px;
   background-color: #f5f5f5;
   border: 1px solid #e3e3e3;
