--- a/assets/main.css
+++ b/assets/main.css
@@ -135,3 +135,26 @@ canvas {
     font-size: 26px;
     
 }
+
+.saltImage {
+    width: 34px;
+    height: 20px;
+}
+
+.label-desc {
+    padding: 12px;
+    margin-bottom: 12px;
+}
+
+.topMargin {
+    padding-top: 6px;
+}
+
+.infoHeader {
+    padding-left: 12px;
+    font-size: 18px;
+    vertical-align: middle;
+}
+
+.description {
+}
